Language swicther in updated on mobile breakpoint and css styles fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+}
+
+.playfair-family {
+    font-family: "Playfair Display", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 24px;
+}
+
+.manrope-family {
+    font-family: "Manrope", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 @font-face {
@@ -798,7 +814,7 @@ body {
     padding: 5px 5px;
 }
 
-.menu__nav-wrapper ul li .lan-nav-menu li a{
+.menu__nav-wrapper ul li .lan-nav-menu li a {
     font-size: 12px;
 }
 
@@ -1010,8 +1026,16 @@ body {
     width: 18.97px !important;
     height: 14.23px !important;
     border-radius: 2px !important;
-    opacity: 0 !important;
-    visibility: hidden !important;
+    /* opacity: 0 !important; */
+    /* visibility: hidden !important; */
+}
+
+.side__menu-list ul#menu-language-switcher-1 li a {
+    color: #000;
+}
+
+.side__menu-list ul#menu-language-switcher-1 li {
+    margin-bottom: 0px;
 }
 
 .gsatelite.gt-current-lang img {
@@ -1651,6 +1675,7 @@ body {
 
 .portfolio__wrapper .mission__card-content {
     padding: 19px 19px 23.91px 19px;
+    height: 300px;
 }
 
 .portfolio__wrapper .mission__card-content p {
